[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gzchat"
version = "0.1.0"
description = "command line graphical LLM chat interface that opens in the browser"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "H5Gizmos @ git+https://github.com/AaronWatters/H5Gizmos.git",
]

[project.scripts]
add_example = "gzchat.add_example:main"
gzchat = "gzchat.chatter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
