[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gzchat"
version = "0.1.1"
description = "command line graphical LLM chat interface that opens in the browser"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "h5gizmos",
    "markdown",
]

[project.scripts]
gzchat = "gzchat.chatter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
